--- a/web_static/1-index.html
+++ b/web_static/1-index.html
@@ -1,5 +1,6 @@
 <html>
     <head>
+        <body style="margin:0; padding:0%;">
         <style>
             header {
             background-color: #FF0000;
@@ -17,8 +18,9 @@
             justify-content: center;
         }
         </style>
+        </body>
     </head>
-    <body style="margin:0; padding:0%;">
+    
         <header></header>
         <footer>Best School</footer>
     </body>
