--- a/web_static/2-index.html
+++ b/web_static/2-index.html
@@ -1,8 +1,11 @@
 <html>
-    <head></head>
-    <body style="margin:0; padding:0%;">
-        <header style="background-color: #FF0000; height: 70px; width: 100%;"></header>
-        <footer style="background-color: #00FF00; height: 60px; width: 100%; 
-        bottom: 0%; position: fixed; display: flex; align-items: center; justify-content: center;">Best School</footer>
-    </body>
+    <head>
+        <body style="margin:0; padding:0%;">
+        <link rel="stylesheet" href="styles/2-common.css">
+        <link rel="stylesheet" href="styles/2-header.css">
+        <link rel="stylesheet" href="styles/2-footer.css">
+        </body>
+    </head>
+        <header></header>
+        <footer>Best School</footer>
 </html>
