--- a/web_static/3-index.html
+++ b/web_static/3-index.html
@@ -2,18 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Airbnb Clone</title>
-    <link rel="shortcut icon" href="images/icon.png" type="image/x-icon">
+    <link rel="icon" type="image/x-icon" href="images/icon.png">
     <link rel="stylesheet" href="styles/3-common.css">
     <link rel="stylesheet" href="styles/3-header.css">
     <link rel="stylesheet" href="styles/3-footer.css">
+    <title>Airbnb_Clone</title>
 </head>
 <body>
     <header></header>
-    <footer>
-        <p>Best School</p>
-    </footer>
+    <footer>Best School</footer>
 </body>
 </html>
